# proteus

./: .gitignore  Cargo.toml  PLAN.md  README.md  SESSION_STATUS.md
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
bsdpi-ai/: Cargo.toml
bsdpi-ai/src/: bandit.rs  error.rs  evolver.rs  fingerprint.rs  genome.rs  history.rs  lib.rs  orchestrator.rs  registry.rs  signature.rs  wilson.rs
bsdpi-android/: Cargo.toml
bsdpi-android/src/: lib.rs
bsdpi-cli/: Cargo.toml
bsdpi-cli/src/: main.rs  updater.rs
bsdpi-core/: Cargo.toml
bsdpi-core/src/: chains.rs  lib.rs  manager.rs  probe.rs  settings.rs  updater.rs
bsdpi-engine/: Cargo.toml
bsdpi-engine/src/: byedpi.rs  lib.rs  traits.rs  warp.rs  zapret.rs
bsdpi-gui/: Cargo.toml
bsdpi-gui/src/: app.rs  lib.rs  main.rs  panels.rs  state.rs
bsdpi-updater/: Cargo.toml
bsdpi-updater/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
