[package]
name = "bsdpi-cli"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Proteus — AI DPI Bypass CLI"

[[bin]]
name = "proteus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
chrono.workspace = true
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
bsdpi-core = { path = "../bsdpi-core" }
