[package]
name = "bsdpi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "BSDPI CLI — управление Proteus через командную строку"

[dependencies]
bsdpi-ai.workspace = true
bsdpi-engine.workspace = true
bsdpi-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
