[package]
name = "bsdpi-core"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "BSDPI Core Services — probing, settings, engine manager, updater"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
