[package]
name = "bsdpi-gui"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
description = "BSDPI GUI — egui/eframe desktop application"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
chrono.workspace = true
